--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                   >
                   </li>
                   <li class="item-address">
-                    <a class="address-info" href="mailto:info@devstudio.com"
-                      >г.Харьковб улю Мироносицкая 10</a
+                    <a class="address-info" href=""
+                      >г.Харьков ул. Мироносицкая 10</a
                     >
                   </li>
                   <li class="item-address">
@@ -256,8 +256,8 @@
           <p class="paragraph-footer-social">Контакты</p>
           <ul class="list-socials-footer">
             <li class="item-address">
-              <a class="address-info-footer" href="mailto:info@devstudio.com"
-                >г.Харьковб улю Мироносицкая 10а</a
+              <a class="address-info-footer" href=""
+                >г.Харьков ул. Лермонтовская 10а</a
               >
             </li>
             <li class="item-address">
