--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <section class="section">
         <div class="container-about-us container">
-            <h2 id="about_us" class="title-left-about-us">НАШИ <span class="title-right-about-us">ПРЕИМУЩУСТВА</span></h2>
+            <h2 id="about_us" class="title-left-about-us">НАШИ ПРЕИМУЩЕСТВА</h2>
             
                 <div class="item-img-about-us"> 
                     <picture>
