--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 />
               </svg>
             </button>
-        <div class="container">
+        <div class="container-offer">
           
           <h1 class="order-title">
             Лучшие предложения по солнечному Египту из Харькова
